--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </li>
                     <li>
                         <img src="игры.gif" alt="Видеоигры">
-                        <p>Видеоигры - ещё один замечательный способ увлекательно проводить время. Я не слишком большая фанатка однотипных скилл-зависимых игр, а вот красивые бродилки - это мы заглянем под каждый камень, интерактивное кино - поплачем над смертями второстепенных персонажей, красочный кооп с кучей механик - не распрощаемся, пока не выбьем платину. П.с. Спустя 5 лет использования паленых контроллеров, так и не было выявлено причин покупать реговые.</p>
+                        <p><b>Видеоигры</b> - ещё один замечательный способ увлекательно проводить время. Я не слишком большая фанатка однотипных скилл-зависимых игр, а вот красивые бродилки - это мы заглянем под каждый камень, интерактивное кино - поплачем над смертями второстепенных персонажей, красочный кооп с кучей механик - не распрощаемся, пока не выбьем платину. П.с. Спустя 5 лет использования паленых контроллеров, так и не было выявлено причин покупать реговые.</p>
                     </li>
                     <li>
                         <img src="волейбол.jpg" alt="Волейбол">
