--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <ul>
                     <li>
                         <img src="пазлы.jpg" alt="Сбор пазлов">
-                        <p>Сбор пазлов прекрасно подходит для расслабления и тренировки внимания. За этим занятием я могу не заметить как пройдёт 10 часов без еды и движения. Я увлекаюсь пазлами уже много лет, и за это время у меня скопилась приличная коллекция. Поэтому моё окружение знает, что, если не хочется ломать голову над подарком для меня, всегда можно подарить пазлы. Мои любимые производители - "Trefl" и "Piece & Love Puzzles"))</p>
+                        <p><b>Сбор пазлов</b> прекрасно подходит для расслабления и тренировки внимания. За этим занятием я могу не заметить как пройдёт 10 часов без еды и движения. Я увлекаюсь пазлами уже много лет, и за это время у меня скопилась приличная коллекция. Поэтому моё окружение знает, что, если не хочется ломать голову над подарком для меня, всегда можно подарить пазлы. Мои любимые производители - "Trefl" и "Piece & Love Puzzles"))</p>
                     </li>
                     <li>
                         <img src="игры.gif" alt="Видеоигры">
@@ -216,23 +216,23 @@
                     </li>
                     <li>
                         <img src="волейбол.jpg" alt="Волейбол">
-                        <p>Волейбол - это отличный способ оставаться активной и здоровой. Под видом веселой игры с любимой командой вы получаете полноценную кардио тренировку, ведь здесь важно всё: внимательность, реакция, гибкость, специальные навыки, силовые показатели, скорость. Доказано, что командные игры на свежем воздухе помогают избавиться от физических и ментальных проблем. Так что все на волейбол!!! </p>
+                        <p><b>Волейбол</b> - это отличный способ оставаться активной и здоровой. Под видом веселой игры с любимой командой вы получаете полноценную кардио тренировку, ведь здесь важно всё: внимательность, реакция, гибкость, специальные навыки, силовые показатели, скорость. Доказано, что командные игры на свежем воздухе помогают избавиться от физических и ментальных проблем. Так что все на волейбол!!! </p>
                     </li>
                     <li>
                         <img src="готовка.jpg" alt="Кулинария">
-                        <p>Готовка еды - пошаговый медитативный процесс, который к тому же приводит к приятным результатам. Существует всего два правила. "Побольше сыра", если блюдо солёное, и "побольше крема", если оно сладкое.</p>
+                        <p><b>Готовка еды</b> - пошаговый медитативный процесс, который к тому же приводит к приятным результатам. Существует всего два правила. "Побольше сыра", если блюдо солёное, и "побольше крема", если оно сладкое.</p>
                     </li>
                     <li>
                         <img src="аниме.jpg" alt="Просмотр аниме">
-                        <p>Просмотр аниме - это целый мир приключений и эмоций, который увлекает и вдохновляет. Каждый может найти что-то на свой вкус! Я смотрю аниме примерно с 2014-го года и за всё это время так и не посморела ни одной серии "Наруто". Вопросы?</p>
+                        <p><b>Просмотр аниме</b> - это целый мир приключений и эмоций, который увлекает и вдохновляет. Каждый может найти что-то на свой вкус! Я смотрю аниме примерно с 2014-го года и за всё это время так и не посморела ни одной серии "Наруто". Вопросы?</p>
                     </li>
                     <li>
                         <img src="манга.png" alt="Перевод манги">
-                        <p>Перевод манги. Я состою в команде из трёх человек, которая занимается перводом манги и манхвы на русский язык (да, мы пираты). В основном я работаю как клинер и редактор перевода. Скорее всего, у меня есть проф. деформация, связанная с редактурой текста, и именно поэтому я так мучила свою команду по ГМРПО, когда дело доходило до составления отчётов. Простите!</p>
+                        <p><b>Перевод манги</b>. Я состою в команде из трёх человек, которая занимается перводом манги и манхвы на русский язык (да, мы пираты). В основном я работаю как клинер и редактор перевода. Скорее всего, у меня есть проф. деформация, связанная с редактурой текста, и именно поэтому я так мучила свою команду по ГМРПО, когда дело доходило до составления отчётов. Простите!</p>
                     </li>
                     <li>
                         <img src="чгк.jpg" alt="Интеллектульные игры">
-                        <p>Спортивный "ЧГК". Около четырех лет я играла в командные интеллектуальные игры (напрмер, "Что? Где? Когда?", "Брейн-ринг", "Своя игра" и т.д.) спортивного формата (варианты, которые можно увидеть по телевидению, называются "показательными"). После перезда в Минск я почти полность отказалась от этого хобби, о чём сильно жалею и надеюсь, что в будущем смогу исправить ситуацию :(</p>
+                        <p><b>Спортивный "ЧГК"</b>. Около четырех лет я играла в командные интеллектуальные игры (напрмер, "Что? Где? Когда?", "Брейн-ринг", "Своя игра" и т.д.) спортивного формата (варианты, которые можно увидеть по телевидению, называются "показательными"). После перезда в Минск я почти полность отказалась от этого хобби, о чём сильно жалею и надеюсь, что в будущем смогу исправить ситуацию :(</p>
                     </li>
                 </ul>
             </section>
